# webrtc-c

./: .gitignore  CMakeLists.txt  Makefile  RGB_yoloV7.txt  Thermal_yoloV7.txt  add_cron.sh  cam_ctl  circular_buffer.c  circular_buffer.h  command_handler.c  command_handler.h  config.c  config.h  config.json  config_250120.json  config_infer_primary_yoloV7.txt  config_infer_secondary.txt  config_infer_test_vp9.json  config_main.json  config_test.json  config_vp8_6.json  config_vp9.json  config_vp9_infer.json  copy.sh  curllib.c  curllib.h  curllib_test.c  del_unused_engine.py  device_setting-.json  device_setting-0402.json  device_setting.c  device_setting.h  device_setting.json  device_setting_org.json  disk_check.c  disk_check.sh  document.txt  event_record_test.sh  event_recorder.c  event_recorder.h  (+76 more)
python/: Makefile  camera.py  camera_config.json  disk_manager.py  event_osd_maker.cpp  event_recorder.py  http_transfer_config.json  inference_system.py  jetson_http_sender.py
